<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_valveSignals" Id="{ba1f9c32-7c7b-04ce-1267-5524e5c96710}">
    <Declaration><![CDATA[TYPE ST_valveSignals :
STRUCT
    Name : STRING[20]; // Descriptive name (e.g., 'ValveA', 'InletValve1')
    DI1 : BOOL; // Valve open feedback
    DI2 : BOOL; // Valve closed feedback
    DO1 : BOOL; // Valve Initialization Signal
    AI1 : REAL; // Valve position (0-10V)
    AO1 : REAL; // Valve setpoint (0-10V)
    State : INT; // Operating state (0=Off, 1=Open/Close, 2=OpenLoop, 3=PID)
    hOpenClose : BOOL; // HMI open/close input
    Setpoint : REAL; // Setpoint for OpenLoop or PID (0-10V)
    PV : REAL; // Process Variable for PID
    Output : REAL; // PID output (0-10V)
	Status : INT; // Diagnostic status (0 = OK, 1 = Fault)
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>