<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL" Id="{ae3bfd4d-cad6-090e-2b29-8bdb174a4977}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	valveCount : INT := 4;
	sValveNames : ARRAY[1..valveCount] OF STRING[20] := ['Dilution Selector', 'WFI Selector', 'Formation Drain', 'WFI Bypass Inlet'];
	
	hmiDisplayW : INT := 1109;
	hmiDisplayH : INT := 624;
	hmiContentRegW : REAL := 1109;
	hmiContentREgH : INT :=  400;
	
END_VAR

VAR_GLOBAL

	myText 		: STRING(16) := 'Type';
	myNum		: REAL := 0;
	
	//AO1 AT %Q* : REAL;
	DO1 AT %Q* : BOOL;
	AO3 AT %Q* : REAL;
	DO3 AT %Q* : BOOL;

    // IOs Dilution Selector Valve (SV)
    gvDigIn1_dilutionSV AT %I* : BOOL; // Digital Input 1 Selector Valve
    gvDigIn2_dilutionSV AT %I* : BOOL; // Digital Input 2 Selector Valve
    gvAnIn1_dilutionSV AT %I* : REAL;  // Analog Input 1 Selector Valve
    gvDigOut1_dilutionSV AT %Q* : BOOL; // Digital Output 1 Selector Valve
    gvAnOut1_dilutionSV AT %Q* : REAL; // Analog Output 1 Selector Valve
    
    // IOs WFI Selector Valve (SV) - Used for water-for-injection process
    gvDigIn1_wfiSV AT %I* : BOOL;      // Digital Input 1 WFI Selector Valve
    gvDigIn2_wfiSV AT %I* : BOOL;      // Digital Input 2 WFI Selector Valve
    gvAnIn1_wfiSV AT %I* : REAL;       // Analog Input 1 WFI Selector Valve
    gvDigOut1_wfiSV AT %Q* : BOOL;     // Digital Output 1 WFI Selector Valve
    gvAnOut1_wfiSV AT %Q* : REAL;      // Analog Output 1 WFI Selector Valve

	    // IOs Formation Selector Valve (SV) - Used for water-for-injection process
    gvDigIn1_formDrain AT %I* : BOOL;      // Digital Input 1 WFI Selector Valve
    gvDigIn2_formDrain AT %I* : BOOL;      // Digital Input 2 WFI Selector Valve
    gvAnIn1_formDrain AT %I* : REAL;       // Analog Input 1 WFI Selector Valve
    gvDigOut1_formDrain AT %Q* : BOOL;     // Digital Output 1 WFI Selector Valve
    gvAnOut1_formDrain AT %Q* : REAL;      // Analog Output 1 WFI Selector Valve
	
		    // IOs Formation Selector Valve (SV) - Used for water-for-injection process
    gvDigIn1_wfiBypassIn AT %I* : BOOL;      // Digital Input 1 WFI Selector Valve
    gvDigIn2_wfiBypassIn AT %I* : BOOL;      // Digital Input 2 WFI Selector Valve
    gvAnIn1_wfiBypassIn AT %I* : REAL;       // Analog Input 1 WFI Selector Valve
    gvDigOut1_wfiBypassIn AT %Q* : BOOL;     // Digital Output 1 WFI Selector Valve
    gvAnOut1_wfiBypassIn AT %Q* : REAL;      // Analog Output 1 WFI Selector Valve
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>