<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_valveControl" Id="{476bcf38-e1d4-0cba-1204-1378ddf6ec7f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_valveControl
VAR_INPUT
    //fbValveNames : ARRAY[1..GVL.valveCount] OF STRING[20]; // Array of valve names
END_VAR
VAR_IN_OUT
    fbValves : ARRAY[1..GVL.valveCount] OF ST_valveSignals;   // Array of valve structures
END_VAR
VAR_OUTPUT
    //Status : INT;                             // 0=OK, 1=Valve not found
END_VAR
VAR
    i : INT;                                  // Internal loop variable
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Initialize output
//Status := 0;

// Control valves based on hOpenClose
FOR i := 1 TO gvl.valveCount DO
    //IF fbValves[i].Name = fbValveNames[i] THEN
        CASE fbValves[i].State OF
            1: // Open/Close mode
                IF fbValves[i].hOpenClose THEN
                    fbValves[i].AO1 := 10.0; // Open
                ELSE
                    fbValves[i].AO1 := 0.0; // Close
                END_IF
            2: // OpenLoop
                fbValves[i].AO1 := fbValves[i].Setpoint;
            3: // PID (Placeholder)
                fbValves[i].AO1 := 0.0;
            ELSE
                fbValves[i].AO1 := 0.0;
                //Status := Status + 2;
        END_CASE
    //ELSE
        //Status := Status + 1;
    //END_IF
END_FOR]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>